--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -370,7 +370,7 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
-  <p>Dumbass</p>
+  <p>Very cool Angular resources!!</p>
 
   <input type="hidden" #selection>
 
