--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -340,7 +340,7 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
-  <p>Here are some links to help you get started with your Docker and K8 journey:</p>
+  <p>Here are some links to help you get started with your Docker and K8 journey and taking this to the next level:</p>
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
